--- a/parse.ipynb
+++ b/parse.ipynb
@@ -8,9 +8,10 @@
    },
    "outputs": [],
    "source": [
-    "import psycopg2\n",
-    "import re\n",
-    "from lxml import etree\n",
+    "import psycopg2           # PostGIS\n",
+    "import re                 # Regex\n",
+    "from lxml import etree    # XML parsing\n",
+    "from IPython.display import clear_output\n",
     "\n",
     "infile = \"testdump-s.xml\"\n",
     "lang = \"en\"\n",
@@ -32,40 +33,49 @@
     "if drop: # drop everything and recreate tables\n",
     "    cur.execute('DROP TABLE IF EXISTS \"links\";')\n",
     "    cur.execute('CREATE TABLE \"links\" (\"from\" varchar, \"to\" varchar, \"lang\" varchar, \"links\" integer, \"mentions\" integer) ;')\n",
-    "\n",
-    "\n",
     "    \n",
-    "def findreferences(pagetext):\n",
+    "def findreferences(pagetext, pagetitle):\n",
+    "    \n",
     "    # find all links via regex, save in a dict with the link as key and number of occurrences for this link as value\n",
     "    links = linkpattern.finditer(pagetext)\n",
+    "        \n",
     "    for match in links:\n",
-    "        print match.group(0)\n",
+    "        link = match.group(1)\n",
     "        \n",
-    "        title = match.group(1)\n",
-    "        print title\n",
-    "        \n",
-    "        if match.group(2):\n",
+    "        # find all occurrences of the link text on the page:\n",
+    "        matches = re.findall(re.escape(link), pagetext)\n",
+    "        nummatches = len(matches)\n",
+    "\n",
+    "        # if there is an alias in this link, also look for its occurrences: \n",
+    "        if match.group(2):  # this is the pipe \"|\"\n",
     "            alias = match.group(3)\n",
-    "            print alias\n",
-    "    # 2. go through array of links; for every link: \n",
-    "    #      a. find all mentions via regex (also for aliases!)\n",
-    "    #      b. insert into PostGIS links table\n",
-    "    \n",
-    "    \n",
+    "            aliasmatches = re.findall(re.escape(alias), pagetext)\n",
+    "\n",
+    "            # if the alias is a substring of the full page title, e.g. \"Brooklyn, NY\" and \"Brooklyn\"\n",
+    "            # avoid double counting!\n",
+    "            if alias in link:\n",
+    "                nummatches = len(aliasmatches)\n",
+    "            else:\n",
+    "                nummatches = nummatches + len(aliasmatches)   \n",
+    "\n",
+    "\n",
+    "\n",
+    "        # insert results into DB\n",
+    "        cur.execute('INSERT INTO \"links\" (from, to, lang, links, mentions) VALUES (\"'+pagetitle+'\", \"'+link+'\")';\n",
+    "            \n",
     "    \n",
     "# for the parsing, we follow the approach explained here: \n",
     "# http://www.ibm.com/developerworks/xml/library/x-hiperfparse/ \n",
     "pages = etree.iterparse(infile, events=('end',), tag=ns+'page')\n",
     "\n",
     "# go through wikipedia pages in dump, one by one:\n",
-    "for event, page in pages:    \n",
-    "    title    = page.find(ns+'title')\n",
-    "    pageid   = page.find(ns+'id')    \n",
+    "for event, page in pages:\n",
+    "    pagetitle    = page.find(ns+'title')\n",
     "    pagetext = page.find(ns+'revision/'+ns+'text')\n",
-    "    \n",
-    "    print \" >> \"+title.text\n",
-    "    findreferences(pagetext.text)\n",
-    "    \n",
+    "\n",
+    "    #print \" >> \"+pagetitle.text\n",
+    "    findreferences(pagetext.text, pagetitle.text)\n",
+    "\n",
     "    # print(title.text)\n",
     "    # It's safe to call clear() here because no descendants will be accessed\n",
     "    page.clear()\n",
@@ -75,10 +85,6 @@
     "        del page.getparent()[0]\n",
     "\n",
     "\n",
-    "\n",
-    "    \n",
-    "    \n",
-    "    \n",
     "# Pass data to fill\n",
     "# cur.execute(\"INSERT INTO test (num, data) VALUES (%s, %s)\",\n",
     "\n",
@@ -92,26 +98,10 @@
     "\n",
     "# Close communication with the database\n",
     "cur.close()\n",
-    "conn.close()"
+    "conn.close()\n",
+    "\n",
+    "print \"done\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
