DB insertion added

--- a/parse.ipynb
+++ b/parse.ipynb
@@ -2,24 +2,32 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "done\n"
+     ]
+    }
+   ],
    "source": [
     "import psycopg2           # PostGIS\n",
     "import re                 # Regex\n",
     "from lxml import etree    # XML parsing\n",
     "from IPython.display import clear_output\n",
     "\n",
-    "infile = \"testdump-s.xml\"\n",
+    "infile = \"testdump-m.xml\"\n",
     "lang = \"en\"\n",
     "\n",
     "ns = '{http://www.mediawiki.org/xml/export-0.10/}'\n",
     "\n",
     "# drop everything and start over?\n",
-    "drop = False\n",
+    "drop = True\n",
     "\n",
     "# Connect to an existing database\n",
     "conn = psycopg2.connect(\"dbname=CPT user=carsten\")\n",
@@ -37,31 +45,56 @@
     "def findreferences(pagetext, pagetitle):\n",
     "    \n",
     "    # find all links via regex, save in a dict with the link as key and number of occurrences for this link as value\n",
-    "    links = linkpattern.finditer(pagetext)\n",
+    "    links = linkpattern.findall(pagetext)\n",
+    "    \n",
+    "    # we'll go through the links in alphabetical order; whenever the lastlink is different from the current one, we'll \n",
+    "    # write the accumulated count of the lastlinks to the DB:\n",
+    "    lastlink = None \n",
+    "    lastalias = None\n",
+    "    linkscount = 0\n",
+    "    mentionscount = 0\n",
+    "    \n",
+    "    for match in sorted(links):\n",
+    "        link = match[0]\n",
+    "\n",
+    "        theselinks = 0\n",
     "        \n",
-    "    for match in links:\n",
-    "        link = match.group(1)\n",
+    "        if link != lastlink: \n",
+    "            #write to DB:\n",
+    "            if lastlink:  # don't write on the first iteration when lastlink is empty!\n",
+    "                # insert results into DB\n",
+    "                cur.execute(\"INSERT INTO links VALUES (%s, %s, %s, %s, %s);\", (pagetitle, lastlink, lang, linkscount, mentionscount))\n",
+    "                \n",
+    "            # and start over\n",
+    "            lastlink = link\n",
+    "            linkscount = 1\n",
     "        \n",
-    "        # find all occurrences of the link text on the page:\n",
-    "        matches = re.findall(re.escape(link), pagetext)\n",
-    "        nummatches = len(matches)\n",
+    "            # find all occurrences of the link text on the page:\n",
+    "            matches = re.findall(re.escape(link), pagetext)\n",
+    "            theselinks = len(matches)\n",
+    "            mentionscount = theselinks\n",
+    "            \n",
+    "        else:\n",
+    "            # still the same link, only update the linkscount\n",
+    "            linkscount = linkscount + 1\n",
     "\n",
     "        # if there is an alias in this link, also look for its occurrences: \n",
-    "        if match.group(2):  # this is the pipe \"|\"\n",
-    "            alias = match.group(3)\n",
-    "            aliasmatches = re.findall(re.escape(alias), pagetext)\n",
+    "        if match[2]:  # this is the alias\n",
+    "            alias = match[2].strip(\" \")\n",
+    "            if len(alias) > 0: # skips empty alias, which does happen...\n",
+    "                # only search for appearances of this alias if it is not the same as in the last iteration!\n",
+    "                if alias != lastalias: \n",
+    "                    lastalias = alias\n",
+    "                    aliasmatches = re.findall(re.escape(alias), pagetext)\n",
     "\n",
-    "            # if the alias is a substring of the full page title, e.g. \"Brooklyn, NY\" and \"Brooklyn\"\n",
-    "            # avoid double counting!\n",
-    "            if alias in link:\n",
-    "                nummatches = len(aliasmatches)\n",
-    "            else:\n",
-    "                nummatches = nummatches + len(aliasmatches)   \n",
+    "                    # if the alias is a substring of the full page title, e.g. \"Brooklyn, NY\" and \"Brooklyn\"\n",
+    "                    # avoid double counting!\n",
+    "                    if alias in link:\n",
+    "                        mentionscount = mentionscount + len(aliasmatches) - theselinks\n",
+    "                    else:\n",
+    "                        mentionscount = mentionscount + len(aliasmatches)   \n",
     "\n",
     "\n",
-    "\n",
-    "        # insert results into DB\n",
-    "        cur.execute('INSERT INTO \"links\" (from, to, lang, links, mentions) VALUES (\"'+pagetitle+'\", \"'+link+'\")';\n",
     "            \n",
     "    \n",
     "# for the parsing, we follow the approach explained here: \n",
@@ -69,7 +102,7 @@
     "pages = etree.iterparse(infile, events=('end',), tag=ns+'page')\n",
     "\n",
     "# go through wikipedia pages in dump, one by one:\n",
-    "for event, page in pages:\n",
+    "for event, page in pages: \n",
     "    pagetitle    = page.find(ns+'title')\n",
     "    pagetext = page.find(ns+'revision/'+ns+'text')\n",
     "\n",
@@ -102,6 +135,24 @@
     "\n",
     "print \"done\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
