Some code restructuring

--- a/parse.ipynb
+++ b/parse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "metadata": {
     "collapsed": false
    },
@@ -16,10 +16,10 @@
     }
    ],
    "source": [
-    "import psycopg2           # PostGIS\n",
-    "import re                 # Regex\n",
-    "from lxml import etree    # XML parsing\n",
-    "from IPython.display import clear_output\n",
+    "import psycopg2               # PostGIS client\n",
+    "import re                     # Regex\n",
+    "from lxml import etree        # XML parsing\n",
+    "import multiprocessing as mp  # multiprocessor support\n",
     "\n",
     "infile = \"testdump-m.xml\"\n",
     "lang = \"en\"\n",
@@ -95,14 +95,7 @@
     "                        mentionscount = mentionscount + len(aliasmatches)   \n",
     "\n",
     "\n",
-    "            \n",
-    "    \n",
-    "# for the parsing, we follow the approach explained here: \n",
-    "# http://www.ibm.com/developerworks/xml/library/x-hiperfparse/ \n",
-    "pages = etree.iterparse(infile, events=('end',), tag=ns+'page')\n",
-    "\n",
-    "# go through wikipedia pages in dump, one by one:\n",
-    "for event, page in pages: \n",
+    "def processpage(page):\n",
     "    pagetitle    = page.find(ns+'title')\n",
     "    pagetext = page.find(ns+'revision/'+ns+'text')\n",
     "\n",
@@ -115,15 +108,25 @@
     "\n",
     "    # Also eliminate now-empty references from the root node to <Title> \n",
     "    while page.getprevious() is not None:\n",
-    "        del page.getparent()[0]\n",
+    "            del page.getparent()[0]\n",
     "\n",
+    "            \n",
+    "def go(pages):\n",
+    "    # go through wikipedia pages in dump, one by one:\n",
+    "    for event, page in pages: \n",
+    "        processpage(page)\n",
+    "        \n",
     "\n",
-    "# Pass data to fill\n",
-    "# cur.execute(\"INSERT INTO test (num, data) VALUES (%s, %s)\",\n",
+    "            \n",
+    "# for the parsing, we follow the approach explained here: \n",
+    "# http://www.ibm.com/developerworks/xml/library/x-hiperfparse/ \n",
+    "pages = etree.iterparse(infile, events=('end',), tag=ns+'page')\n",
     "\n",
-    "# Query the database and obtain data as Python objects\n",
-    "#cur.execute(\"SELECT * FROM test;\")\n",
-    "#cur.fetchone()\n",
+    "# run the processing in multiprocess mode, as explained here:\n",
+    "# http://sebastianraschka.com/Articles/2014_multiprocessing_intro.html\n",
+    "# pool = mp.Pool(processes=4)\n",
+    "# results = [pool.apply_async(go, args=(x,)) for x in range(1,7)]\n",
+    "\n",
     "\n",
     "\n",
     "# Make the changes to the database persistent\n",
