Removed multi-process stuff – not working with lxml

--- a/parse.ipynb
+++ b/parse.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 70,
    "metadata": {
     "collapsed": false
    },
@@ -42,7 +42,10 @@
     "    cur.execute('DROP TABLE IF EXISTS \"links\";')\n",
     "    cur.execute('CREATE TABLE \"links\" (\"from\" varchar, \"to\" varchar, \"lang\" varchar, \"links\" integer, \"mentions\" integer) ;')\n",
     "    \n",
-    "def findreferences(pagetext, pagetitle):\n",
+    "def findreferences(page):\n",
+    "        \n",
+    "    pagetitle = page.find(ns+'title').text\n",
+    "    pagetext  = page.find(ns+'revision/'+ns+'text').text\n",
     "    \n",
     "    # find all links via regex, save in a dict with the link as key and number of occurrences for this link as value\n",
     "    links = linkpattern.findall(pagetext)\n",
@@ -93,41 +96,22 @@
     "                        mentionscount = mentionscount + len(aliasmatches) - theselinks\n",
     "                    else:\n",
     "                        mentionscount = mentionscount + len(aliasmatches)   \n",
-    "\n",
-    "\n",
-    "def processpage(page):\n",
-    "    pagetitle    = page.find(ns+'title')\n",
-    "    pagetext = page.find(ns+'revision/'+ns+'text')\n",
-    "\n",
-    "    #print \" >> \"+pagetitle.text\n",
-    "    findreferences(pagetext.text, pagetitle.text)\n",
-    "\n",
-    "    # print(title.text)\n",
-    "    # It's safe to call clear() here because no descendants will be accessed\n",
+    "                        \n",
     "    page.clear()\n",
     "\n",
     "    # Also eliminate now-empty references from the root node to <Title> \n",
     "    while page.getprevious() is not None:\n",
-    "            del page.getparent()[0]\n",
-    "\n",
+    "        del page.getparent()[0]\n",
     "            \n",
     "def go(pages):\n",
     "    # go through wikipedia pages in dump, one by one:\n",
     "    for event, page in pages: \n",
-    "        processpage(page)\n",
-    "        \n",
-    "\n",
+    "        findreferences(page)\n",
     "            \n",
     "# for the parsing, we follow the approach explained here: \n",
     "# http://www.ibm.com/developerworks/xml/library/x-hiperfparse/ \n",
     "pages = etree.iterparse(infile, events=('end',), tag=ns+'page')\n",
-    "\n",
-    "# run the processing in multiprocess mode, as explained here:\n",
-    "# http://sebastianraschka.com/Articles/2014_multiprocessing_intro.html\n",
-    "# pool = mp.Pool(processes=4)\n",
-    "# results = [pool.apply_async(go, args=(x,)) for x in range(1,7)]\n",
-    "\n",
-    "\n",
+    "go(pages)\n",
     "\n",
     "# Make the changes to the database persistent\n",
     "conn.commit()\n",
@@ -138,15 +122,6 @@
     "\n",
     "print \"done\""
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
